cmake_minimum_required(VERSION 3.31)
project(untitled12)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled12
        900/96A.cpp
        900/318A.cpp
        900/160A.cpp
        900/405A.cpp
        900/133A.cpp
        900/208A.cpp
        900/580A.cpp
        900/337A.cpp
        900/451A.cpp)
